--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="./Style/Images/PNG/favicon.png" />
-    <meta name="description" content=" Villa F5 Teranga Al Amin: 04 chambres, double salon, cuisine équipée, piscine, garage dans une cité
-        entièrement fermée." />
+    <meta name="description" content=" Situé au quartier POINT E,
+la Résidence AMAÏSSA vous
+offre cet appartements F3
+de haut standing.
+" />
     <meta name="Keywords"
         content=" Visualisation architecturale, ArchViz, Architectur, Visualisation 3D, 3D sénégal, Architectur sénégal," />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,6 +30,10 @@
 
 
     <div class="the_description">
+        Situé au quartier POINT E,
+        la Résidence AMAÏSSA vous
+        offre cet appartements F3
+        de haut standing
     </div>
 
 
@@ -66,6 +73,7 @@
             animation__fade="property: components.material.material.color; type: color; from: #FFF; to: #000; dur: 300; startEvents: fade"
             animation__fadeback="property: components.material.material.color; type: color; from: #000; to: #FFF; dur: 300; startEvents: animationcomplete__fade">
         </a-sky>
+
         <a-assets>
             <!-- <img id="Scene-0" src="./Style/Images/Scene-0.jpg">
         <img id="Arrow-1" src="./Style/Images/PNG/Arrow-1.png"> -->
